--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,10 @@ body {
 /* Header */
 header {
     background-image: url("/images/background-header.jpg");
-    
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 75vh;
     nav {
         padding: 50px;
         .row {
@@ -41,6 +44,36 @@ header {
                         }
                     }
                 }
+            }
+        }
+    }
+
+    .splash {
+        position: relative;
+        .splash-inner {
+            text-align: center;
+            position: absolute;
+            top: 100px;
+            left: 25%;
+            color: #fff;
+            h2 {
+                font-size: 45px;
+                font-weight: 100;
+                font-style: italic;
+            }
+
+            h1 {
+                font-size: 72px;
+                padding-bottom: 30px;
+            }
+
+            a {
+                text-decoration: none;
+                color: #fff;
+                font-size: 20px;
+                background-color: #FED238;
+                border-radius: 3px;
+                padding: 25px 40px;
             }
         }
     }
