--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,24 @@
 
 body {
     font-family: Arial, sans-serif;
+    font-size: 15px;
     margin: 0;
     padding: 0;
+}
+
+.subpage-title {
+    font-size: 40px;
+    font-weight: 700;
+    color: #242226;
+    margin-bottom: -10px;
+}
+
+.description-subpage {
+    color: #747370;
+    font-style: italic;
+    font-size: 17px;
+    font-weight: 100;
+    padding-bottom: 50px;
 }
 
 /* Header */
@@ -35,6 +51,7 @@ header {
                     flex-wrap: nowrap;
                     flex-direction: row;
                     margin-top: 15px;
+                    margin-left: 70px;
                     li {
                         flex: 20%;
                         a {
@@ -54,7 +71,7 @@ header {
             text-align: center;
             position: absolute;
             top: 100px;
-            left: 25%;
+            left: 28%;
             color: #fff;
             h2 {
                 font-size: 45px;
@@ -79,3 +96,18 @@ header {
     }
 }
 
+/* Section services */
+
+.services {
+    padding: 75px;
+    text-align: center;
+    
+    h3 {
+        font-weight: 700px;
+    }
+
+    p {
+        color: #747370;
+        padding: 0 25px;
+    }
+}
