--- a/sass/style.scss
+++ b/sass/style.scss
@@ -111,3 +111,43 @@ header {
         padding: 0 25px;
     }
 }
+
+/* Section our portfolio */
+
+.portfolio {
+    text-align: center;
+    padding: 75px;
+    background-color: #F7F7F7;
+
+    .box {
+        margin-bottom: 50px;
+        display: block;
+
+        .box-image {
+            width: 280px;
+            img {
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+        
+        .box-body {
+            background-color: #fff;
+            padding: 15px;
+            margin-top: -5px;
+            margin-left: -1px;
+            width: 282px;
+            
+            h3 {
+                font-weight: 700;
+                margin-bottom: -10px;
+                color: #313032;
+            }
+
+            p {
+                color: #747370;
+                font-style: italic;
+            }
+        }
+    }
+}
