--- a/sass/style.scss
+++ b/sass/style.scss
@@ -117,11 +117,11 @@ header {
     text-align: center;
     padding: 75px;
     background-color: #F7F7F7;
-
+    
     .box {
         margin-bottom: 50px;
         display: block;
-
+        
         .box-image {
             width: 280px;
             img {
@@ -179,6 +179,54 @@ footer {
                 border-radius: 50%;
                 padding-top: 10px;
                 padding-left: 3px;
+            }
+        }
+    }
+}
+
+/* Media */
+
+@media (min-width: 768px) and (max-width: 991px) {
+    header {
+        nav {
+            .row {
+                .name-landing-page {
+                    text-align: center;
+                    a {
+                        font-size: 40px;
+                    }
+                }
+                .list-nav {
+                    ul {
+                        li {
+                            a {
+                                font-size: 17px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+    .splash {
+        .splash-inner {
+            top: 100px;
+            left: 5%;
+
+            h2 {
+                font-size: 35px;
+                font-weight: 100;
+                font-style: italic;
+            }
+
+            h1 {
+                font-size: 60px;
+                padding-bottom: 30px;
+            }
+
+            a {
+                font-size: 17px;
+                }
             }
         }
     }
