Add Style CSS for RWD for phone for section our portfolio

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -282,4 +282,12 @@ footer {
             }
         }
     }
+
+    .portfolio {
+        .box {
+            display: flex;
+            flex-direction: column;
+            justify-self: center;
+        }
+    }
 }
