--- a/sass/style.scss
+++ b/sass/style.scss
@@ -290,4 +290,11 @@ footer {
             justify-self: center;
         }
     }
+
+    footer {
+        text-align: center;
+        ul {
+            margin-left: -40px;
+        }
+    }
 }
