--- a/sass/style.scss
+++ b/sass/style.scss
@@ -264,7 +264,7 @@ footer {
 
         .splash {
             .splash-inner {
-                top: 60px;
+                top: 0;
                 left: 0;
 
                 h2 {
